--- a/css/style.css
+++ b/css/style.css
@@ -2343,7 +2343,7 @@ h4.package {
     .content-blocks.pop.showx,
     .inline-menu-container,
     .close-pop {
-        width: 1024px;
+        width: 60%;
         left: auto;
         right: 0;
     }
